[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/Retrospective-Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lifebar Label" type="RichTextLabel" parent="."]
margin_left = 16.0
margin_top = 2.0
margin_right = 128.0
margin_bottom = 72.0
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "Life"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartMenu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGameButton" type="Button" parent="StartMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 332.0
margin_top = 228.0
margin_right = 652.0
margin_bottom = 299.0
custom_fonts/font = SubResource( 4 )
text = "Startgame"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="StartAgainButton" type="Button" parent="GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 316.0
margin_top = 228.0
margin_right = 664.0
margin_bottom = 299.0
custom_fonts/font = SubResource( 4 )
text = "Startagain?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.5
margin_top = 75.0
margin_right = 96.5
margin_bottom = 123.0
custom_fonts/font = SubResource( 3 )
text = "Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Volume" type="HSlider" parent="VolumeLabel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = 41.0
margin_right = 160.0
margin_bottom = 65.0
value = 100.0
[connection signal="pressed" from="StartMenu/StartGameButton" to="." method="startGame"]
[connection signal="pressed" from="GameOver/StartAgainButton" to="." method="startGame"]
